# GEX_GMVAE

./: README.md  pyproject.toml
MNIST_src/: mnist_vae.ipynb
data/: README.md  select_gex.py
src/: GMVAE.py  examine_estimates.py  plot_data.py  run_series.py  train.py
